--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+bin/
+include/
+pyvenv.cfg
 
 # Spyder project settings
 .spyderproject
@@ -114,3 +117,5 @@ visits.db.dir
 
 #local runs
 /appointments.json
+
+run-once.sh
